<resources>
    <string name="app_name">Voting</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="vote_2">vote 2</string>
    <string name="vote_3">vote 3</string>
    <string name="vote_1">vote 1</string>
    <string name="vote_for_your_candidate">Vote For Your Candidate</string>
    <string name="vote_title">Vote Title</string>
    <string name="status">Status</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="candidate_description">Candidate Description </string>
    <string name="candidate_name">Candidate Name </string>
    <string name="candidate_symbol">candidate_symbol</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>