<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:elevation="8dp"
    app:cardCornerRadius="16dp"
    app:cardBackgroundColor="@android:color/white"> <!-- Set background color to white -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="171dp"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/voteTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote_title"
            android:textColor="#212121"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/voteStatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/status"
            android:textColor="#424242"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="12dp"
            android:background="#E0E0E0" />

        <TextView
            android:id="@+id/voteStartTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:textColor="#666666"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/voteEndTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/end_time"
            android:textColor="#666666"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
