<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:elevation="4dp"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/candidateSymbol"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_background"
            android:contentDescription="@string/candidate_symbol"
            android:scaleType="centerCrop"
            android:src="@drawable/candidate_symbol_placeholder" />

        <!-- Candidate Details -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <!-- Candidate Name -->
            <TextView
                android:id="@+id/candidateName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/candidate_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:lineSpacingExtra="2dp" />

            <!-- Candidate Description -->
            <TextView
                android:id="@+id/candidateDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/candidate_description"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:lineSpacingExtra="1dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>